Added better file handing

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -13,6 +13,9 @@ output:
 library(data.table)
 library(ggplot2)
 
+## Unzip file
+unzip('activity.zip')
+## Read in csv
 activityDS <- read.csv('activity.csv')
 
 ```
